--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     strategy:
       matrix:
@@ -24,4 +24,3 @@ jobs:
     - name: Build
       run: |
         npm install
-        node index.js
