--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ "main" ]
   workflow_dispatch:
-
+env:
+  PORT: ${{ secrets.PORT }}
 jobs:
   build:
     runs-on: self-hosted
@@ -24,5 +25,5 @@ jobs:
     - name: Build
       run: |
         npm ci
-      env:
-        PORT: ${{ secrets.PORT }}
+        echo $PORT
+      
