--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -31,9 +31,9 @@ jobs:
         echo "Environemnt variable is" $PORT
     - name: Debug Environment Variables
       env:
-        DB_HOST: ${{ secrets.PORT }}
+        PORT: ${{ secrets.PORT }}
       run: |
-        if [ -z "$PORT" ]; then
+        if ( -z "$PORT" ); then
           echo "PORT is not set!"
           exit 1
         else
