--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -26,6 +26,8 @@ jobs:
         DB_HOST: ${{ secrets.DB_HOST }}
         DB_USER: ${{ secrets.DB_USER }}
         DB_PASS: ${{ secrets.DB_PASS }}
+        PORT: ${{ secrets.PORT }}
+        ABC: ${{ secrets.ABC }}
       run: |
         echo "Environment variables set!"
         echo "DB host is $DB_HOST"
