--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -1,6 +1,7 @@
 name: Deploy Application
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -33,3 +34,5 @@ jobs:
         echo "DB host is $DB_HOST"
         echo "DB_USER is $DB_USER"
         echo "DB_PASS is $DB_PASS"
+        echo "PORT is $PORT"
+        echo "ABC is $ABC"
