--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout Code
@@ -20,7 +20,7 @@ jobs:
         node-version: '18'
 
     - name: Install Dependencies
-      run: npm install
+      run: npm ci
 
     - name: Set Environment Variables
       env:
