--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -38,4 +38,10 @@ jobs:
         export HELLO="world"
         export PORT=${{ secrets.PORT }}
         echo "ABC is $ABC"
+    - name: Run node js script
+      env:
+        DB_HOST: ${{ secrets.DB_HOST }}
+      run: |
+        echo "RUnning node js application now"
+        node index.js
 
