--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -43,5 +43,5 @@ jobs:
         DB_HOST: ${{ secrets.DB_HOST }}
       run: |
         echo "RUnning node js application now"
-        node index.js
+        npm run start
 
