--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Run node js script
       env:
         DB_HOST: ${{ secrets.DB_HOST }}
+        PORT: ${{ secrets.PORT }}
       run: |
         echo "RUnning node js application now"
         npm run start
